objects/xDO_MDC_customListHeaders__c.object
<CustomObject>
    <fields>
        <fullName>Column1_Data_Type__c</fullName>
        <label>Column1 Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Link</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Column2_Data_Type__c</fullName>
        <label>Column2 Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Link</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Column3_Data_Type__c</fullName>
        <label>Column3 Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Link</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Column_1_Header__c</fullName>
        <label>Column 1 Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_1_is_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Column 1 is Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Column_2_Header__c</fullName>
        <label>Column 2 Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_2_is_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Column 2 is Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Column_3_Header__c</fullName>
        <label>Column 3 Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_3_is_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Column 3 is Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Icon_Background_Color__c</fullName>
        <label>Icon Background Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>blue</fullName>
                </value>
                <value>
                    <fullName>gray</fullName>
                </value>
                <value>
                    <fullName>green</fullName>
                </value>
                <value>
                    <fullName>light-blue</fullName>
                </value>
                <value>
                    <fullName>navy,red</fullName>
                </value>
                <value>
                    <fullName>orange</fullName>
                </value>
                <value>
                    <fullName>pink</fullName>
                </value>
                <value>
                    <fullName>yellow</fullName>
                </value>
                <value>
                    <fullName>yellow-green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Icon__c</fullName>
        <label>List Icon</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>standard:account_info</fullName>
                </value>
                <value>
                    <fullName>standard:account</fullName>
                </value>
                <value>
                    <fullName>standard:action_list_component</fullName>
                </value>
                <value>
                    <fullName>standard:actions_and_buttons</fullName>
                </value>
                <value>
                    <fullName>standard:activation_target</fullName>
                </value>
                <value>
                    <fullName>standard:activations</fullName>
                </value>
                <value>
                    <fullName>standard:address</fullName>
                </value>
                <value>
                    <fullName>standard:agent_home</fullName>
                </value>
                <value>
                    <fullName>standard:agent_session</fullName>
                </value>
                <value>
                    <fullName>standard:aggregation_policy</fullName>
                </value>
                <value>
                    <fullName>standard:ai_accelerator_card</fullName>
                </value>
                <value>
                    <fullName>standard:all</fullName>
                </value>
                <value>
                    <fullName>standard:announcement</fullName>
                </value>
                <value>
                    <fullName>standard:answer_best</fullName>
                </value>
                <value>
                    <fullName>standard:answer_private</fullName>
                </value>
                <value>
                    <fullName>standard:answer_public</fullName>
                </value>
                <value>
                    <fullName>standard:apex_plugin</fullName>
                </value>
                <value>
                    <fullName>standard:apex</fullName>
                </value>
                <value>
                    <fullName>standard:app</fullName>
                </value>
                <value>
                    <fullName>standard:approval</fullName>
                </value>
                <value>
                    <fullName>standard:apps_admin</fullName>
                </value>
                <value>
                    <fullName>standard:apps</fullName>
                </value>
                <value>
                    <fullName>standard:article</fullName>
                </value>
                <value>
                    <fullName>standard:asset_action_source</fullName>
                </value>
                <value>
                    <fullName>standard:asset_action</fullName>
                </value>
                <value>
                    <fullName>standard:asset_audit</fullName>
                </value>
                <value>
                    <fullName>standard:asset_downtime_period</fullName>
                </value>
                <value>
                    <fullName>standard:asset_hierarchy</fullName>
                </value>
                <value>
                    <fullName>standard:asset_object</fullName>
                </value>
                <value>
                    <fullName>standard:asset_relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Name__c</fullName>
        <label>List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Subheader__c</fullName>
        <label>List Subheader</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Title__c</fullName>
        <label>List Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Record_Id__c</fullName>
        <label>Related Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Icon__c</fullName>
        <label>Title Icon</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>account</fullName>
                </value>
                <value>
                    <fullName>account_info</fullName>
                </value>
                <value>
                    <fullName>action_list_component</fullName>
                </value>
                <value>
                    <fullName>actions_and_buttons</fullName>
                </value>
                <value>
                    <fullName>activation_target</fullName>
                </value>
                <value>
                    <fullName>activations</fullName>
                </value>
                <value>
                    <fullName>address</fullName>
                </value>
                <value>
                    <fullName>agent_home</fullName>
                </value>
                <value>
                    <fullName>agent_session</fullName>
                </value>
                <value>
                    <fullName>aggregation_policy</fullName>
                </value>
                <value>
                    <fullName>ai_accelerator_card</fullName>
                </value>
                <value>
                    <fullName>all</fullName>
                </value>
                <value>
                    <fullName>announcement</fullName>
                </value>
                <value>
                    <fullName>answer_best</fullName>
                </value>
                <value>
                    <fullName>answer_private</fullName>
                </value>
                <value>
                    <fullName>answer_public</fullName>
                </value>
                <value>
                    <fullName>apex</fullName>
                </value>
                <value>
                    <fullName>apex_plugin</fullName>
                </value>
                <value>
                    <fullName>app</fullName>
                </value>
                <value>
                    <fullName>approval</fullName>
                </value>
                <value>
                    <fullName>apps</fullName>
                </value>
                <value>
                    <fullName>apps_admin</fullName>
                </value>
                <value>
                    <fullName>article</fullName>
                </value>
                <value>
                    <fullName>asset_action</fullName>
                </value>
                <value>
                    <fullName>asset_action_source</fullName>
                </value>
                <value>
                    <fullName>asset_audit</fullName>
                </value>
                <value>
                    <fullName>asset_downtime_period</fullName>
                </value>
                <value>
                    <fullName>asset_hierarchy</fullName>
                </value>
                <value>
                    <fullName>asset_object</fullName>
                </value>
                <value>
                    <fullName>asset_relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>List Column Header</label>
    <nameField>
        <label>Related List Headers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List Column Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>